[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-reviewer"
version = "1.0.0"
description = "Enterprise Code Review Automation powered by Claude-3.5-Sonnet"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "anthropic==0.28.0",
    "python-multipart==0.0.9",
    "keyring==25.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.4.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath  = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]
